<resources>
    <string name="app_name">Fit_Life</string>
    <string name="google_maps_key" translatable="false">AIzaSyADdlfho1EXT1j3vy-nd0hem19O3mB0WSs</string>
    <string name="Name">Name</string>
    <string name="Age">Age</string>
    <string name="Weight">Weight</string>
    <string name="height">Height</string>
    <string name="save_user">Save User</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="meal_name">Meal Name</string>
    <string name="calories">Calories</string>
    <string name="meal_date">Meal Date</string>
    <string name="add_img">Add Image</string>
    <string name="update">UPDATE</string>
    <string name="workout_type">Workout Type:</string>
    <string name="duration_min">Duration (min):</string>
    <string name="calories_burned">Calories Burned:</string>
    <string name="date_format">Date: </string>
    <string name="add_meal">Add Meal</string>
    <string name="back">Back</string>
    <string name="show_on_map">Show on Map</string>
    <string name="back_to_list">Back to List</string>
    <string name="create_user">Create User</string>
    <string name="title_main">FitLife\nTracker</string>
    <string name="workout">Workout</string>
    <string name="diet">Diet</string>
    <string name="progress">Progress</string>
    <string name="profile">Profile</string>
    <string name="show_near_gym">Show Nearby Gyms</string>
    <string name="save">Save</string>
    <string name="total_workouts">Total Workouts</string>
    <string name="total_calories_burned">Total Calories Burned</string>
    <string name="total_duration">Total Duration</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="total_meals">Total Meals</string>
    <string name="total_calories_consumed">Total Calories Consumed</string>
    <string name="add_workout">Add Workout</string>
    <string name="gym_name">Gym Name</string>
    <string name="gym_address">Gym Address</string>
    <string name="date">Date</string>
    <string name="duration">Duration: 0 min</string>
    <string name="calories0">Calories: 0</string>
    <string name="date01012023">Date: 01/01/2023</string>
    <string name="calories1">Calories: %1$s</string>
    <string name="date1">Date: %1$s</string>
    <string name="duration1">Duration: %1$s min</string>
    <string name="name">Name:</string>
    <string name="calories_">Calories:</string>
    <string name="date_">Date:</string>
    <string name="type">Type:</string>
    <string name="duration_">Duration(min):</string>
    <string name="calories_burned_">Calories:</string>
    <string name="please_fill_in_all_fields">Please fill in all fields correctly.</string>
    <string name="username_already_exists">Username already exists. Please choose a different username.</string>
    <string name="user_created_successfully">User created successfully!</string>
    <string name="login_successful">Login successful!</string>
    <string name="invalid_username_or_password">Invalid username or password.</string>
    <string name="gallery_access_denied">Gallery access denied</string>
    <string name="camera_access_denied">Camera access denied</string>
    <string name="select_image">Select Image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="add">Add</string>
    <string name="please_fill_out_all_fields">Please fill out all fields</string>
    <string name="user_not_found">User not found</string>
    <string name="failed_to_copy_image">Failed to copy image</string>
    <string name="delete_meal">Delete Meal</string>
    <string name="confirm_delete_meal">Are you sure you want to delete this meal?</string>
    <string name="delete">Delete</string>
    <string name="gym_list_title">The list of gyms and fitness facilities closest to you:\n(distance up to 5 km)</string>
    <string name="welcome_back">Welcome back, %1$s!</string>
    <string name="meal_name_label">Meal Name:</string>
    <string name="meal_calories_label">Calories:</string>
    <string name="meal_date_label">Date:</string>
    <string name="user_profile_not_found">User profile not found. Please log in.</string>
    <string name="details_saved_successfully">Details saved successfully!</string>
    <string name="error_saving_profile">Error saving profile. Please try again.</string>
    <string name="total_workouts_">Total Workouts: %1$d</string>
    <string name="total_calories_burned_">Total Calories Burned: %1$d</string>
    <string name="total_duration_">Total Duration: %1$d minutes</string>
    <string name="total_meals_">Total Meals: %1$d</string>
    <string name="total_calories_consumed_">Total Calories Consumed: %1$d</string>
    <string name="current_week_workout_duration">Current Week Workout Duration</string>
    <string name="last_4_months_workout_duration">Last 4 Months Workout Duration</string>
    <string name="last_4_years_workout_duration">Last 4 Years Workout Duration</string>
    <string name="calories_consumed">Calories Consumed</string>
    <string name="current_week_calories_burned">Current Week Calories Burned</string>
    <string name="last_4_months_calories_burned">Last 4 Months Calories Burned</string>
    <string name="last_4_years_calories_burned">Last 4 Years Calories Burned</string>
    <string name="current_week_calories_consumed">Current Week Calories Consumed</string>
    <string name="last_4_months_calories_consumed">Last 4 Months Calories Consumed</string>
    <string name="last_4_years_calories_consumed">Last 4 Years Calories Consumed</string>
    <string name="workout_duration">Workout Duration (minutes)</string>
    <string name="delete_workout">Delete Workout</string>
    <string name="confirm_delete_workout">Are you sure you want to delete this workout?</string>
    <string name="query_gym">gym</string>
    <string name="query_fitness">fitness</string>
    <string name="query_sports">sports</string>
    <string name="query_kosher">כושר</string>
    <string name="query_gym_room">חדר כושר</string>
    <string name="query_sport_center">מרכז ספורט</string>
    <string name="query_fitness_center">מכון כושר</string>
    <string name="query_trainings">אימונים</string>
    <string name="query_pilates">pilates</string>
    <string name="query_pilates_he">פילאטיס</string>
    <string name="query_yoga">יוגה</string>
    <string name="query_equipment">מתקנים</string>
    <string name="query_outdoor_gym">outdoor gym</string>
    <string name="query_outdoor_fitness_he">מתקני כושר בחוץ</string>
    <string name="query_sport_equipment">מתקני ספורט</string>
    <string name="query_sport_area">אזור ספורט</string>
    <string name="query_outdoor_fitness_equipment">Outdoor fitness equipment</string>
    <string name="location_permission_needed">Permission for location access is necessary for using the app</string>
    <string name="location_permissions_not_granted">Location permissions not granted</string>
    <string name="server_error">Failed to fetch data. Server error: %1$s</string>
    <string name="parse_error">Failed to parse response: %1$s</string>
    <string name="network_error">Network error: Unable to resolve host. Please check your internet connection.</string>



</resources>