<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ProfileFragment"
    android:background="#F0E1D8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/editUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:layout_marginBottom="16dp"
            android:enabled="false"
            android:focusable="false" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Name"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/editTextAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Age"
            android:inputType="number"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/editTextWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Weight"
            android:inputType="numberDecimal"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/editTextHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/height"
            android:inputType="numberDecimal"
            android:layout_marginBottom="16dp" />

        <Spinner
            android:id="@+id/spinnerFitnessGoal"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:entries="@array/fitness_goals"
            android:padding="8dp" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            style="@style/CustomButton" />

        <Button
            android:id="@+id/buttonBackToSplash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_gravity="center"
            style="@style/CustomButton" />

    </LinearLayout>
</ScrollView>
