<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@id/editTextUserName"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/buttonLoginUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_below="@id/editTextPassword"
        android:layout_alignParentEnd="true"
        style="@style/CustomButton" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_below="@id/editTextPassword"
        android:layout_toStartOf="@id/buttonLoginUser"
        android:layout_marginEnd="8dp"
        style="@style/CustomButton" />
</RelativeLayout>
