<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ProgressFragment">

    <TextView
        android:id="@+id/textViewTotalWorkouts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:text="@string/total_workouts" />

    <TextView
        android:id="@+id/textViewTotalCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewTotalWorkouts"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:text="@string/total_calories_burned" />

    <TextView
        android:id="@+id/textViewTotalDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewTotalCalories"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:text="@string/total_duration" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButtonGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewTotalDuration"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonWeekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weekly" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonMonthly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monthly" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonYearly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yearly" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/barChartWorkoutTime"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/toggleButtonGroup"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/barChartCaloriesBurned"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/barChartWorkoutTime"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <Button
        android:id="@+id/buttonBackToSplash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        style="@style/CustomButton" />
</RelativeLayout>
