<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backk"
    tools:context=".ui.fragments.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonCreateUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_user"
            style="@style/CustomButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            style="@style/CustomButton"
            app:layout_constraintTop_toBottomOf="@id/buttonCreateUser"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/appNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_main"
            android:textSize="60sp"
            android:textStyle="bold"
            android:textColor="@color/darkBrown"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/buttonLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="38dp" />

        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:visibility="gone"
            android:gravity="center"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@id/appNameTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/navigateWorkoutButton"
            style="@style/CustomButton"
            android:text="@string/workout"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/welcomeTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp" />

        <Button
            android:id="@+id/navigateDietButton"
            style="@style/CustomButton"
            android:text="@string/diet"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/navigateWorkoutButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/navigateProgressButton"
            style="@style/CustomButton"
            android:text="@string/progress"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/navigateDietButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/navigateProfileButton"
            style="@style/CustomButton"
            android:text="@string/profile"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/navigateProgressButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/show_gyms_button"
            style="@style/CustomButton"
            android:textSize="18sp"
            android:text="@string/show_near_gym"
            app:layout_constraintTop_toBottomOf="@id/navigateProfileButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
