<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageViewWorkout"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:visibility="gone"
        android:layout_marginEnd="16dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/workoutTypeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/workout_type"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/workoutDurationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration_min"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/workoutCaloriesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calories0"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/workoutDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date01012023"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/buttonEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_edit"
            android:contentDescription="Edit" />

        <ImageButton
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_delete"
            android:contentDescription="Delete" />
    </LinearLayout>
</LinearLayout>
