<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0E1D8"
    tools:context=".ui.fragments.ProgressFragment">


<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textViewTotalWorkouts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/total_workouts" />

            <TextView
                android:id="@+id/textViewTotalCalories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/total_calories_burned"
                android:textSize="20sp"
                android:layout_below="@id/textViewTotalWorkouts" />

            <TextView
                android:id="@+id/textViewTotalDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"
                android:layout_marginTop="8dp"
                android:text="@string/total_duration"
                android:layout_below="@id/textViewTotalDuration" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp">

                <Button
                    android:id="@+id/buttonWeekly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weekly"
                    style="@style/CustomButton" />

                <Button
                    android:id="@+id/buttonMonthly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/monthly"
                    android:layout_marginStart="16dp"
                    style="@style/CustomButton" />

                <Button
                    android:id="@+id/buttonYearly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yearly"
                    android:layout_marginStart="16dp"
                    style="@style/CustomButton" />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewWorkoutDurationTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text=""
                android:textAlignment="viewStart"
                tools:ignore="RtlCompat" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/barChartWorkoutTime"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" />

            <TextView
                android:id="@+id/textViewCaloriesBurnedTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text=""
                android:textAlignment="viewStart"
                tools:ignore="RtlCompat" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/barChartCaloriesBurned"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" />

            <TextView
                android:id="@+id/textViewTotalMeals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/total_meals"
                android:layout_marginTop="40dp"
                android:layout_below="@id/barChartCaloriesBurned" />


            <TextView
                android:id="@+id/textViewTotalCaloriesConsumed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"
                android:layout_marginTop="8dp"
                android:text="@string/total_calories_consumed"
                android:layout_below="@id/textViewTotalMeals" />


            <TextView
                android:id="@+id/textViewCaloriesConsumedTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text=""
                android:textAlignment="viewStart"
                tools:ignore="RtlCompat" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/barChartCaloriesConsumed"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_below="@id/textViewTotalCaloriesConsumed" />

            <Button
                android:id="@+id/buttonBackToSplash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:layout_marginTop="32dp"
                android:layout_gravity="center_horizontal"
                style="@style/CustomButton"
                android:layout_below="@id/barChartCaloriesConsumed" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
