<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0E1D8"> <!-- שינוי הרקע כאן -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/editTextMealName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/meal_name"
            android:inputType="text"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/editTextMealCalories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/calories"
            android:inputType="number"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/editTextMealDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:inputType="none"
            android:focusable="false"
            android:textColor="#000000"
            android:text="Date" />

        <Button
            android:id="@+id/buttonAddImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_img"
            android:layout_marginTop="16dp"
            style="@style/CustomButton" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:visibility="gone"
            android:layout_marginTop="16dp"
            android:id="@+id/imageContainer">

            <ImageView
                android:id="@+id/imageViewMeal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

            <ImageButton
                android:id="@+id/buttonRemoveImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_margin="8dp"
                android:background="?attr/selectableItemBackground"
                android:src="@android:drawable/ic_menu_delete"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="32dp">

            <Button
                android:id="@+id/buttonSaveMeal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:textColor="@color/darkBrown"
                android:background="@android:color/transparent"
                android:layout_marginEnd="16dp"
                android:textSize="16sp" />

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@color/darkBrown"
                android:background="@android:color/transparent"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
